tests/ui/spirv-attr/multiple.stderr
error: only one intrinsic type attribute is allowed on a struct
 --> $DIR/multiple.rs:8:28
  |
8 | #[rust_gpu::spirv(sampler, sampler)]
  |                            ^^^^^^^
  |
note: previous intrinsic type attribute
 --> $DIR/multiple.rs:8:19
  |
8 | #[rust_gpu::spirv(sampler, sampler)]
  |                   ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:11:27
   |
11 | #[rust_gpu::spirv(matrix, matrix)]
   |                           ^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:11:19
   |
11 | #[rust_gpu::spirv(matrix, matrix)]
   |                   ^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:17:28
   |
17 | #[rust_gpu::spirv(sampler, generic_image_type)]
   |                            ^^^^^^^^^^^^^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:17:19
   |
17 | #[rust_gpu::spirv(sampler, generic_image_type)]
   |                   ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:20:28
   |
20 | #[rust_gpu::spirv(sampler, matrix)]
   |                            ^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:20:19
   |
20 | #[rust_gpu::spirv(sampler, matrix)]
   |                   ^^^^^^^

error: only one #[rust_gpu::spirv(block)] attribute is allowed on a struct
  --> $DIR/multiple.rs:26:26
   |
26 | #[rust_gpu::spirv(block, block)]
   |                          ^^^^^
   |
note: previous #[rust_gpu::spirv(block)] attribute
  --> $DIR/multiple.rs:26:19
   |
26 | #[rust_gpu::spirv(block, block)]
   |                   ^^^^^

warning: #[rust_gpu::spirv(block)] is no longer needed and should be removed
  --> $DIR/multiple.rs:26:19
   |
26 | #[rust_gpu::spirv(block, block)]
   |                   ^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:29:27
   |
29 | #[rust_gpu::spirv(vertex, vertex)]
   |                           ^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:29:19
   |
29 | #[rust_gpu::spirv(vertex, vertex)]
   |                   ^^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:32:27
   |
32 | #[rust_gpu::spirv(vertex, fragment)]
   |                           ^^^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:32:19
   |
32 | #[rust_gpu::spirv(vertex, fragment)]
   |                   ^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:37:32
   |
37 |     #[rust_gpu::spirv(uniform, uniform)] _same_storage_class: (),
   |                                ^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:37:23
   |
37 |     #[rust_gpu::spirv(uniform, uniform)] _same_storage_class: (),
   |                       ^^^^^^^

error: only one storage class attribute is allowed on a function param
  --> $DIR/multiple.rs:38:32
   |
38 |     #[rust_gpu::spirv(uniform, push_constant)] _diff_storage_class: (),
   |                                ^^^^^^^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:38:23
   |
38 |     #[rust_gpu::spirv(uniform, push_constant)] _diff_storage_class: (),
   |                       ^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:40:33
   |
40 |     #[rust_gpu::spirv(position, position)] _same_builtin: (),
   |                                 ^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:40:23
   |
40 |     #[rust_gpu::spirv(position, position)] _same_builtin: (),
   |                       ^^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:41:33
   |
41 |     #[rust_gpu::spirv(position, vertex_index)] _diff_builtin: (),
   |                                 ^^^^^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:41:23
   |
41 |     #[rust_gpu::spirv(position, vertex_index)] _diff_builtin: (),
   |                       ^^^^^^^^

error: only one #[rust_gpu::spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:43:43
   |
43 |     #[rust_gpu::spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |                                           ^^^^^^^^^^^^^^^^^^
   |
note: previous #[rust_gpu::spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:43:23
   |
43 |     #[rust_gpu::spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |                       ^^^^^^^^^^^^^^^^^^

error: only one #[rust_gpu::spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:44:43
   |
44 |     #[rust_gpu::spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |                                           ^^^^^^^^^^^^^^^^^^
   |
note: previous #[rust_gpu::spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:44:23
   |
44 |     #[rust_gpu::spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |                       ^^^^^^^^^^^^^^^^^^

error: only one #[rust_gpu::spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:46:36
   |
46 |     #[rust_gpu::spirv(binding = 0, binding = 0)] _same_binding: (),
   |                                    ^^^^^^^^^^^
   |
note: previous #[rust_gpu::spirv(binding)] attribute
  --> $DIR/multiple.rs:46:23
   |
46 |     #[rust_gpu::spirv(binding = 0, binding = 0)] _same_binding: (),
   |                       ^^^^^^^^^^^

error: only one #[rust_gpu::spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:47:36
   |
47 |     #[rust_gpu::spirv(binding = 0, binding = 1)] _diff_binding: (),
   |                                    ^^^^^^^^^^^
   |
note: previous #[rust_gpu::spirv(binding)] attribute
  --> $DIR/multiple.rs:47:23
   |
47 |     #[rust_gpu::spirv(binding = 0, binding = 1)] _diff_binding: (),
   |                       ^^^^^^^^^^^

error: only one #[rust_gpu::spirv(flat)] attribute is allowed on a function param
  --> $DIR/multiple.rs:49:29
   |
49 |     #[rust_gpu::spirv(flat, flat)] _flat: (),
   |                             ^^^^
   |
note: previous #[rust_gpu::spirv(flat)] attribute
  --> $DIR/multiple.rs:49:23
   |
49 |     #[rust_gpu::spirv(flat, flat)] _flat: (),
   |                       ^^^^

error: only one #[rust_gpu::spirv(invariant)] attribute is allowed on a function param
  --> $DIR/multiple.rs:51:34
   |
51 |     #[rust_gpu::spirv(invariant, invariant)] _invariant: (),
   |                                  ^^^^^^^^^
   |
note: previous #[rust_gpu::spirv(invariant)] attribute
  --> $DIR/multiple.rs:51:23
   |
51 |     #[rust_gpu::spirv(invariant, invariant)] _invariant: (),
   |                       ^^^^^^^^^

error: only one #[rust_gpu::spirv(unroll_loops)] attribute is allowed on a function
  --> $DIR/multiple.rs:55:33
   |
55 | #[rust_gpu::spirv(unroll_loops, unroll_loops)]
   |                                 ^^^^^^^^^^^^
   |
note: previous #[rust_gpu::spirv(unroll_loops)] attribute
  --> $DIR/multiple.rs:55:19
   |
55 | #[rust_gpu::spirv(unroll_loops, unroll_loops)]
   |                   ^^^^^^^^^^^^

error: aborting due to 18 previous errors; 1 warning emitted

